[gd_scene load_steps=3 format=3 uid="uid://bbcrabknbbhrs"]

[ext_resource type="Theme" uid="uid://dsk5olnx1e77u" path="res://FancyTheme.tres" id="1_bgwn0"]
[ext_resource type="Script" uid="uid://dfk8vfn6crvvd" path="res://Scripts/coin_weight.gd" id="2_igi78"]

[node name="CoinWeight" type="Panel" node_paths=PackedStringArray("WeightSlider", "AvailableWeightLabel")]
anchors_preset = -1
anchor_right = 0.024
offset_left = -252.0
offset_top = -252.0
offset_right = -25.92
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_bgwn0")
script = ExtResource("2_igi78")
WeightSlider = NodePath("HSlider")
AvailableWeightLabel = NodePath("AvailableWeightLabel")

[node name="OddsLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.168033
anchor_right = 1.0
anchor_bottom = 0.557377
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bgwn0")
theme_override_colors/default_color = Color(0.815686, 0.4, 0.352941, 1)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]50/50[/center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.234
offset_bottom = 0.0319977
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.870588, 0.666667, 0.54902, 1)
text = "Odds:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvailableWeightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.428571
anchor_right = 1.0
anchor_bottom = 0.662698
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.870588, 0.666667, 0.54902, 1)
text = "Available Weight: 5%"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AvailableWeightLabel2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0277778
anchor_top = 0.746032
anchor_right = 0.948413
anchor_bottom = 0.980159
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.870588, 0.666667, 0.54902, 1)
text = "<Tails   Heads>"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -28.0
offset_right = -21.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bgwn0")
min_value = 0.45
max_value = 0.55
step = 0.01
value = 0.5
tick_count = 1

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
